<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pizza_dam"
    tools:context=".PersonalizadaActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="368dp"
        android:layout_height="640dp"
        app:cardBackgroundColor="#A3000000"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/idNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/base"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <Spinner
                android:id="@+id/spinnerBase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/custom_border"
                android:backgroundTint="#9C27B0"
                android:foregroundTint="#FBFBFB"
                android:spinnerMode="dialog"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/idNombre3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tamano"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <Spinner
                android:id="@+id/spinnerTamano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/custom_border"
                android:backgroundTint="#9C27B0"
                android:foregroundTint="#FBFBFB"
                android:spinnerMode="dialog"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/idNombre2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingrediente"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="181dp"
                android:layout_margin="20dp">

                <LinearLayout
                    android:id="@+id/tuLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foregroundTint="#FFFFFF"
                        android:text="@string/val1" />

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foregroundTint="#FFFFFF"
                        android:text="@string/val2" />

                    <CheckBox
                        android:id="@+id/checkBox3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foregroundTint="#FFFFFF"
                        android:text="@string/val3" />

                    <CheckBox
                        android:id="@+id/checkBox4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foregroundTint="#FFFFFF"
                        android:text="@string/value4" />

                    <CheckBox
                        android:id="@+id/checkBox5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foregroundTint="#FFFFFF"
                        android:text="@string/val5" />

                    <CheckBox
                        android:id="@+id/checkBox6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foregroundTint="#FFFFFF"
                        android:text="@string/val6" />

                    <CheckBox
                        android:id="@+id/checkBox7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foregroundTint="#FFFFFF"
                        android:text="@string/val7" />

                    <CheckBox
                        android:id="@+id/checkBox8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foregroundTint="#FFFFFF"
                        android:text="@string/val8" />
                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/btnPrecioAlGusto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="#9C27B0"
                android:onClick="nuevaPizza"
                android:text="@string/precio"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="89dp"
        android:layout_height="75dp"
        android:clickable="true"
        android:onClick="salir"
        app:backgroundTint="#9C27B0"
        app:fabCustomSize="75dp"
        app:fabSize="auto"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        app:maxImageSize="90dp"
        app:srcCompat="@drawable/reset_icon_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>