<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pizza_dam"
    android:backgroundTint="#000000"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="321dp"
        android:layout_height="475dp"
        app:cardBackgroundColor="#00FF0000"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="match_parent"
                android:layout_height="184dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo_sin_fondo_pizza_dam" />

            <EditText
                android:id="@+id/usuario"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:ems="10"
                android:fontFamily="@font/alef"
                android:hint="Introduce tu usuario..."
                android:inputType="text"
                android:shadowColor="#FFFFFF"
                android:text="@string/usuario"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#FFFFFF" />

            <EditText
                android:id="@+id/contrasena"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:ems="10"
                android:hint="Introduce tu contraseña..."
                android:inputType="textPassword"
                android:shadowColor="#FFFFFF"
                android:text="@string/contrasena"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#9C27B0"
                    android:onClick="borrarTodo"
                    android:text="@string/borrar"
                    app:icon="@drawable/reset_icon_foreground"
                    app:iconGravity="textEnd"
                    app:iconSize="40dp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#9C27B0"
                    android:onClick="realizarAcceso"
                    android:text="@string/acceder"
                    app:icon="@drawable/enter_icon_foreground"
                    app:iconGravity="textEnd"
                    app:iconSize="40dp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#279C27B0"
                android:onClick="cambiarACrearCuenta"
                android:text="@string/btnRegistro"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>