<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pizza_dam"
    tools:context=".PropiedadesActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="368dp"
        android:layout_height="640dp"
        app:cardBackgroundColor="#A3000000"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imagen"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginTop="68dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/idNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <ListView
                android:id="@+id/miLista"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:layout_margin="15dp"
                android:cacheColorHint="#FFFFFF"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/idTamano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tamano"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <Spinner
                android:id="@+id/spinnerBase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/custom_border"
                android:backgroundTint="#9C27B0"
                android:foregroundTint="#FBFBFB"
                android:spinnerMode="dialog"
                android:textAlignment="center" />

            <Button
                android:id="@+id/idPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:backgroundTint="#9C27B0"
                android:onClick="agregar"
                android:text="@string/precio"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="89dp"
        android:layout_height="75dp"
        android:clickable="true"
        android:onClick="salir"
        app:backgroundTint="#9C27B0"
        app:fabCustomSize="75dp"
        app:fabSize="auto"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:maxImageSize="90dp"
        app:srcCompat="@drawable/reset_icon_foreground" />


</androidx.constraintlayout.widget.ConstraintLayout>